<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".screens.accommodations.details.edit.AccommodationEditFragment">

    <include layout="@layout/toolbar_main"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etLatitude"
                app:layout_constraintTop_toTopOf="@+id/tvLatitude"
                app:layout_constraintBottom_toBottomOf="@+id/tvLatitude"
                app:layout_constraintStart_toEndOf="@+id/tvLatitude" android:layout_marginStart="24dp"
        />
        <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/hint_enter_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName"/>

        <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="10"
                android:hint="@string/hint_enter_description"
                android:inputType="textPersonName"
                android:maxLines="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvDesc"/>

        <EditText
                android:id="@+id/etAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:hint="@string/hint_enter_street_name"
                android:inputType="textPersonName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStreet"/>

        <Spinner
                android:id="@+id/sp_categories"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:entries="@array/accommodation_categories"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvType"/>

        <Button
                android:id="@+id/btEditAccommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/button_submit_change"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etAddress" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.497"/>
        <TextView
                android:text="@string/label_name_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvName" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/label_description_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvDesc" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etName" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/label_location_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLocation"
                app:layout_constraintTop_toBottomOf="@+id/sp_categories" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/label_type_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvType" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/label_latitude_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLatitude"
                app:layout_constraintTop_toBottomOf="@+id/tvLocation" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"/>
        <TextView
                android:text="@string/label_longitude_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLongitude"
                app:layout_constraintTop_toTopOf="@+id/etLongitude"
                app:layout_constraintBottom_toBottomOf="@+id/etLongitude"
                app:layout_constraintStart_toStartOf="@+id/tvLatitude"/>
        <EditText
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etLongitude"
                app:layout_constraintTop_toBottomOf="@+id/etLatitude"
                app:layout_constraintStart_toStartOf="@+id/etLatitude"/>
        <TextView
                android:text="@string/label_city_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCity" app:layout_constraintStart_toStartOf="@+id/tvLongitude"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etLongitude"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/etCity"
                app:layout_constraintStart_toStartOf="@+id/tvCity"
                app:layout_constraintTop_toBottomOf="@+id/tvCity" android:hint="@string/hint_enter_city"/>
        <TextView
                android:text="@string/label_zip_code_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvZipCode"
                app:layout_constraintTop_toTopOf="@+id/tvCity" app:layout_constraintStart_toEndOf="@+id/etCity"
                android:layout_marginStart="24dp"/>
        <EditText
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etZipCode"
                app:layout_constraintStart_toStartOf="@+id/tvZipCode"
                app:layout_constraintTop_toBottomOf="@+id/tvZipCode"
                android:hint="@string/hint_enter_zip_code"/>
        <TextView
                android:text="@string/label_street_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvStreet" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/etCity" app:layout_constraintStart_toStartOf="@+id/etCity"
        />
        <TextView
                android:text="@string/label_number_accommodation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvNum"
                app:layout_constraintTop_toTopOf="@+id/tvStreet" app:layout_constraintStart_toEndOf="@+id/etAddress"
                android:layout_marginStart="24dp"/>
        <EditText
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etNum"
                app:layout_constraintTop_toTopOf="@+id/etAddress" app:layout_constraintStart_toStartOf="@+id/tvNum"
                android:hint="@string/hint_enter_street_num"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>