<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_gravity="center"
	android:orientation="vertical"
	tools:context=".screens.accommodations.edit.EditAccommodationFragment">

	<include layout="@layout/toolbar_main"/>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:id="@+id/focusContainer">

		<EditText
			android:id="@+id/etLatitude"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:ems="10"
			android:inputType="numberDecimal"
			app:layout_constraintBottom_toBottomOf="@+id/tvLatitude"
			app:layout_constraintStart_toEndOf="@+id/tvLatitude"
			app:layout_constraintTop_toTopOf="@+id/tvLatitude"/>

		<EditText
			android:id="@+id/etName"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:ems="10"
			android:hint="@string/hint_enter_name"
			android:inputType="textPersonName"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvName"/>

		<EditText
			android:id="@+id/etDescription"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:ems="10"
			android:hint="@string/hint_enter_description"
			android:inputType="textPersonName"
			android:maxLines="4"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvDesc"/>

		<EditText
			android:id="@+id/etAddress"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:ems="10"
			android:hint="@string/hint_enter_street_name"
			android:inputType="textPersonName"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvStreet"/>

		<Spinner
			android:id="@+id/sp_categories"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:entries="@array/accommodation_categories"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvType"/>

		<TextView
			android:id="@+id/tvName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/label_name_accommodation"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<TextView
			android:id="@+id/tvDesc"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/label_description_accommodation"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/etName"/>

		<TextView
			android:id="@+id/tvLocation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="10dp"
			android:text="@string/label_location_accommodation"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/etCancellingFee"/>

		<TextView
			android:id="@+id/tvType"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="@string/label_type_accommodation"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/etDescription"/>

		<TextView
			android:id="@+id/tvLatitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="24dp"
			android:text="@string/label_latitude_accommodation"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvLocation"/>

		<TextView
			android:id="@+id/tvLongitude"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:text="@string/label_longitude_accommodation"
			app:layout_constraintBottom_toBottomOf="@+id/etLongitude"
			app:layout_constraintEnd_toStartOf="@+id/etLongitude"
			app:layout_constraintTop_toTopOf="@+id/etLongitude"/>

		<EditText
			android:id="@+id/etLongitude"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:layout_marginEnd="16dp"
			android:ems="10"
			android:inputType="numberDecimal"
			app:layout_constraintBottom_toBottomOf="@+id/etLatitude"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toTopOf="@+id/etLatitude"/>

		<TextView
			android:id="@+id/tvCity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/label_city_accommodation"
			app:layout_constraintStart_toStartOf="@+id/tvLatitude"
			app:layout_constraintTop_toBottomOf="@+id/etLatitude"/>

		<EditText
			android:id="@+id/etCity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/hint_enter_city"
			android:inputType="textPersonName"
			app:layout_constraintStart_toStartOf="@+id/tvCity"
			app:layout_constraintTop_toBottomOf="@+id/tvCity"/>

		<TextView
			android:id="@+id/tvZipCode"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:text="@string/label_zip_code_accommodation"
			app:layout_constraintStart_toEndOf="@+id/etCity"
			app:layout_constraintTop_toTopOf="@+id/tvCity"/>

		<EditText
			android:id="@+id/etZipCode"
			android:layout_width="130dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/hint_enter_zip_code"
			android:inputType="number"
			app:layout_constraintStart_toStartOf="@+id/tvZipCode"
			app:layout_constraintTop_toBottomOf="@+id/tvZipCode"/>

		<TextView
			android:id="@+id/tvStreet"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/label_street_accommodation"
			app:layout_constraintStart_toStartOf="@+id/etCity"
			app:layout_constraintTop_toBottomOf="@+id/etCity"/>

		<TextView
			android:id="@+id/tvNum"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="24dp"
			android:text="@string/label_number_accommodation"
			app:layout_constraintStart_toEndOf="@+id/etAddress"
			app:layout_constraintTop_toTopOf="@+id/tvStreet"/>

		<EditText
			android:id="@+id/etNum"
			android:layout_width="130dp"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/hint_enter_street_num"
			android:inputType="number"
			app:layout_constraintStart_toStartOf="@+id/tvNum"
			app:layout_constraintTop_toTopOf="@+id/etAddress"/>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rvServices"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginBottom="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toStartOf="@+id/btAddService"
			app:layout_constraintHorizontal_bias="1.0"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvLabelServices"
			app:layout_constraintVertical_bias="1.0"/>

		<TextView
			android:id="@+id/tvLabelServices"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="Services:"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/etAddress"/>

		<Button
			android:id="@+id/btAddService"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="8dp"
			android:layout_marginStart="8dp"
			android:layout_marginTop="24dp"
			android:text="Add service"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@+id/tvLabelServices"
			app:layout_constraintTop_toBottomOf="@+id/etNum"/>

		<TextView
			android:id="@+id/tvLabelCancellingFee"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="16dp"
			android:layout_marginTop="8dp"
			android:text="Cancelling fee:"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/sp_categories"/>

		<EditText
			android:id="@+id/etCancellingFee"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:ems="10"
			android:inputType="number"
			app:layout_constraintBottom_toBottomOf="@+id/tvLabelCancellingFee"
			app:layout_constraintStart_toEndOf="@+id/tvLabelCancellingFee"
			app:layout_constraintTop_toTopOf="@+id/tvLabelCancellingFee"/>

	</androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>