<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:orientation="vertical"
	tools:context=".screens.login.LoginFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<Button
			android:id="@+id/btLogin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="32dp"
			android:text="@string/button_login"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/etPassword"/>

		<TextView
			android:id="@+id/tvPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/label_password"
			android:textSize="24sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/etUsername"/>

		<TextView
			android:id="@+id/tvUsername"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_username"
			android:textSize="24sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"/>

		<EditText
			android:id="@+id/etUsername"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/hint_username"
			android:inputType="textPersonName"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvUsername"/>

		<EditText
			android:id="@+id/etPassword"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:ems="10"
			android:hint="@string/hint_password"
			android:inputType="textPassword"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/tvPassword"/>

	</androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>